  no longer required for runners, that`s all in xp-tools-${VERSION}.xar
  To run unittests on a released version, use the following:
  unittest -cp {VERSION}/lib/xp-net.xp_framework-{VERSION}.xar [tests]
  (friebe)

RFCs
~~~~
- Implemented RFC #0174 - io.collections interface additions / io.streams 
  integration
  (friebe)

Features
~~~~~~~~
- Added util.log.StreamAppender to use streams as log appender
  (hinckel)
- Added io.streams.ChannelInputStream and io.streams.ChannelOutputStream 
  classes that read from / write to stdin, stdout and stderr
  (friebe)
- Made peer.ftp.FtpConnection constructor accept not only strings but also
  peer.URL objects - same as in peer.http.HttpConnection
  (friebe)
- Implemented feature suggested in bug #31 - Allow Numbers in Scriptlet
  States
  (friebe)
- Added io.collections.ArchiveCollection class to work with XARs
  (friebe)
- Added support for enums to the Remote API (EASC)
  See http://news.xp-framework.net/article/287/2009/01/28/
  (hinckel, friebe)
- Made lang.XPClass::isSubclassOf() accept not only a string with the 
  classname but also XPClass objects
  (friebe)

Bugfixes
~~~~~~~~
- Fixed xp::stringOf() to not incorrectly detect recursion with objects 
  returning hashcodes which are very large numbers
  (friebe)
- Fixed dataset generator to use prefixed XML file names when accessing
  referenced tables for foreign keys
  (gellweiler, hinckel)
- Fixed WSDL code generator: replace "." with "_" and upper case first
  letter in generated class names
  (wagner, hinckel)
- Fixed org.fpdf.FPDF::writeCells() when writing justified cells
  (friebe, Tobias Roth, Thomas Geiger)
- Use "etc" directory as default configuration path for xpcli command
  (hinckel)
- Fixed rdbms.mysql.MySQLDBAdapter did not handle '"' quotes (bug#34)
  (wagner)
- Fixed util.Date::hashCode() returns timestamp now instead of object id.
  (wagner)
- Made /proc lookup inside lang.Process::getProcessById() work on 